# autoware_lanelet2_map_validator

./: .cspell.json  .pre-commit-config-optional.yaml  CHANGELOG.rst  LICENSE  README.md  README_ja.md  build_depends.repos  lanelet2_extension_CMakeLists.txt  package.xml  test.sh  validator_CMakeLists.txt
autoware_lanelet2_map_validator/: CHANGELOG.rst  CMakeLists.txt  autoware_requirement_set.json  lanelet2_gui.spec  package.xml  sample_exclusion_list.json
autoware_lanelet2_map_validator/config/: iforest_model.json  isolation_forest_model.json  issues_info.json  params.yaml
autoware_lanelet2_map_validator/docs/: how_to_contribute.md
autoware_lanelet2_map_validator/docs/area/: buffer_zone_validity.md  detection_area.md  missing_regulatory_elements_for_bus_stop_areas.md  no_parking_area.md  no_stopping_area.md
autoware_lanelet2_map_validator/docs/crosswalk/: check_pedestrian_traffic_light_subtype.md  crosswalk_safety_attributes.md  regulatory_element_details_for_crosswalks.md
autoware_lanelet2_map_validator/docs/intersection/: intersection_area_tagging.md  intersection_area_validity.md  intersection_lanelet_border_type.md  lanelet_division.md  lateral_subtype_connection.md  regulatory_element_details_for_virtual_traffic_lights.md  right_of_way_for_virtual_traffic_lights.md  right_of_way_for_virtual_traffic_lights_logic_summary.md  right_of_way_with_traffic_lights.md  right_of_way_without_traffic_lights.md  road_markings.md  roundabout_configuration.md  single_virtual_traffic_light_reference.md  turn_signal_distance_overlap.md  virtual_traffic_light_line_order.md  virtual_traffic_light_section_overlap.md
autoware_lanelet2_map_validator/docs/lane/: border_sharing.md  centerline_geometry.md  centerline_stick_out.md  lane_change_attribute.md  lanelet_geometry.md  lateral_subtype_connection.md  longitudinal_subtype_connection.md  pedestrian_lane.md  road_lanelet_attribute.md  road_shoulder.md  speed_limit_validity.md  walkway_intersection.md
autoware_lanelet2_map_validator/docs/stop_line/: regulatory_element_details_for_traffic_signs.md
autoware_lanelet2_map_validator/docs/traffic_light/: body_height.md  light_bulb_tagging.md  regulatory_element_details_for_traffic_lights.md
autoware_lanelet2_map_validator/gui/: .cspell.json  README.md  __init__.py  gui.py  gui_helper.py  map_validator_gui.spec  map_visualizer.py  matplotlib_widget.py  pyi_rth_distutils.py  requirements.txt
autoware_lanelet2_map_validator/map_requirements/: autoware_requirement_set.json
autoware_lanelet2_map_validator/map_requirements/pilot-auto/: cargo_transport-v2024_2_0.json  cargo_transport-v2024_7_0.json  cargo_transport-v2025_3_0.json  cargo_transport-v2025_8_0.json  common.json  delivery_robot-v0_39_0.json  delivery_robot-v2023_10_2.json  robo_taxi-v0_44_0_0.json  robo_taxi-v0_45_0_0.json  robo_taxi-v0_46_0.json  robo_taxi-v0_47_0.json  robo_taxi-v0_48_0.json  robo_taxi-v0_50_0.json  shuttle_bus-v3_1_0.json  shuttle_bus-v4_0_1.json  shuttle_bus-v4_1_0.json  shuttle_bus-v4_3_0.json  shuttle_bus_v4_2_0.json
autoware_lanelet2_map_validator/map_requirements/pilot-auto/v1.0.2/: cargo_transport-v2024_2_0.json  cargo_transport-v2024_7_0.json  common.json  delivery_robot-v2023_10_2.json  robo_taxi-v0_44_0_0.json  robo_taxi-v0_45_0_0.json  robo_taxi-v0_46_0.json  robo_taxi-v0_47_0.json  shuttle_bus-v2_3_0.json  shuttle_bus-v3_0_0.json  shuttle_bus-v3_1_0.json  shuttle_bus-v4_0_1.json  shuttle_bus-v4_1_0.json
autoware_lanelet2_map_validator/map_requirements/pilot-auto/v1.0.3/: cargo_transport-v2024_7_0.json  cargo_transport-v2025_6_0.json  common.json  delivery_robot-v2023_10_2.json  robo_taxi-v0_46_0.json  robo_taxi-v0_47_0.json  robo_taxi-v0_48_0.json  shuttle_bus-v4_0_1.json  shuttle_bus-v4_2_0.json  shuttle_bus_v4_2_0.json
autoware_lanelet2_map_validator/map_requirements/pilot-auto/v1.0.4/: cargo_transport-v2024_2_0.json  robo_taxi-v0_44_0_0.json
autoware_lanelet2_map_validator/map_requirements/pilot-auto/v1.0.5/: cargo_transport-v2025_8_0.json  common.json  delivery_robot-v0_39_0.json  robo_taxi-v0_44_0_0.json  robo_taxi-v0_50_0.json
autoware_lanelet2_map_validator/map_requirements/pilot-auto/v1.0.6/: cargo_transport-v2025_8_0.json  common.json  delivery_robot-v0_39_0.json  robo_taxi-v0_44_0_0.json  robo_taxi-v0_52_0.json
autoware_lanelet2_map_validator/src/: main.cpp
autoware_lanelet2_map_validator/src/common/: cli.cpp  io.cpp  map_loader.cpp  registration.cpp  utils.cpp  validation.cpp
autoware_lanelet2_map_validator/src/gui/: README.md  __init__.py  gui.py  gui_helper.py  map_validator_gui.spec  map_visualizer.py  matplotlib_widget.py
autoware_lanelet2_map_validator/src/include/lanelet2_map_validator/: cli.hpp  config_store.hpp  embedded_defaults.hpp.in  io.hpp  map_loader.hpp  parameter.hpp  utils.hpp  validation.hpp
autoware_lanelet2_map_validator/src/validators/area/: buffer_zone_validity.cpp  detection_area.cpp  missing_regulatory_elements_for_bus_stop_areas.cpp  no_parking_area.cpp  no_stopping_area.cpp
autoware_lanelet2_map_validator/src/validators/crosswalk/: check_pedestrian_traffic_light_subtype.cpp  crosswalk_safety_attributes.cpp  missing_regulatory_elements_for_crosswalks.cpp  regulatory_element_details_for_crosswalks.cpp
autoware_lanelet2_map_validator/src/validators/intersection/: intersection_area_dangling_reference.cpp  intersection_area_segment_type.cpp  intersection_area_tagging.cpp  intersection_area_validity.cpp  intersection_lanelet_border_type.cpp  lanelet_division.cpp  lateral_subtype_connection.cpp  regulatory_element_details_for_virtual_traffic_lights.cpp  right_of_way_for_virtual_traffic_lights.cpp  right_of_way_with_traffic_lights.cpp  (+8 more)
autoware_lanelet2_map_validator/template/: create_new_validator.py  test_validator_template.cpp  validator_template.cpp  validator_template.hpp  validator_template.md
autoware_lanelet2_map_validator/test/data/: test_params.yaml
autoware_lanelet2_map_validator/test/src/: test_issues_info.cpp  test_json_processing.cpp  test_parameter_loading.cpp  test_primitive_exclusion.cpp  test_version_control.cpp
(+366 files in other folders)
