<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autoware_lanelet2_map_validator</name>
  <version>1.5.0</version>
  <description>Validation tool for lanelet2 maps especially for Autoware usage</description>
  <maintainer email="taiki.yamada@tier4.jp">Taiki Yamada</maintainer>
  <maintainer email="mamoru.sobue@tier4.jp">Mamoru Sobue</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_lanelet2_extension</depend>
  <depend>fmt</depend>
  <depend>lanelet2_core</depend>
  <depend>lanelet2_io</depend>
  <depend>lanelet2_maps</depend>
  <depend>lanelet2_projection</depend>
  <depend>lanelet2_routing</depend>
  <depend>lanelet2_traffic_rules</depend>
  <depend>lanelet2_validation</depend>
  <depend>nlohmann-json-dev</depend>
  <depend>pugixml-dev</depend>
  <depend>yaml-cpp</depend>

  <exec_depend>python3-pyside6</exec_depend>

  <test_depend>ament_cmake_ros</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
